text vertical align fix

--- a/frontend/src/tile/Tile.less
+++ b/frontend/src/tile/Tile.less
@@ -7,7 +7,6 @@
   position: relative;
   height: auto;
   box-sizing: border-box;
-  padding: 0 20px;
   text-align: center;
   background: rgba(255, 255, 255, 0.4);
   margin: 0.1% 0.1%;
@@ -67,8 +66,11 @@
 
   .job-texts {
     position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
+    padding: 0 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
